# webserver

./: .gitignore  CMakeLists.txt  ConfigClass.cpp  ConfigClass.hpp  Connection.cpp  Connection.hpp  ConnectionClass.cpp  ConnectionClass.hpp  Makefile  README.md  RequestHeaders.cpp  RequestHeaders.hpp  ResponseHeaders.cpp  ResponseHeaders.hpp  a.out  cgi.cpp  cgi.hpp  main.cpp  methods.cpp  methods.h  testpage.html  utils.cpp  utils.hpp  webserver
another_dir_for_tests/: error501.html  inde.html
config_parser_v.0.1/: Makefile  a.out  main.cpp
config_parser_v.0.1/config/: config_file
config_parser_v.0.1/includes/: ConfigClass.hpp  LocationClass.hpp  config.hpp  config_parser.hpp
config_parser_v.0.1/libft/: Makefile  ft_atoi.cpp  ft_bzero.cpp  ft_calloc.cpp  ft_isalnum.cpp  ft_isalpha.cpp  (+35 more)
configs/: config_file  tester_config
default_errors/: error405.html  error413.html  error500.html  error501.html
directory_for_tests/: error404.html  error501.html
includes/: ConnectionClass.hpp  ConnectionHandling.h  RequestHeaders.hpp  ResponseHeaders.hpp  cgi.hpp  methods.h  utils.hpp
libft/: Makefile  ft_abs.cpp  ft_atoi.cpp  ft_bzero.cpp  ft_calloc.cpp  ft_isalnum.cpp  ft_isalpha.cpp  ft_isascii.cpp  ft_isdigit.cpp  ft_isprint.cpp  ft_itoa.cpp  ft_lstadd_back.cpp  ft_lstadd_front.cpp  ft_lstclear.cpp  ft_lstdelone.cpp  ft_lstiter.cpp  ft_lstlast.cpp  ft_lstmap.cpp  ft_lstnew.cpp  ft_lstsize.cpp  ft_memccpy.cpp  ft_memchr.cpp  ft_memcmp.cpp  ft_memcpy.cpp  ft_memmove.cpp  ft_memset.cpp  ft_min_of_2.cpp  ft_putchar_fd.cpp  ft_putendl_fd.cpp  ft_putnbr_fd.cpp  ft_putstr_fd.cpp  ft_split.cpp  ft_strchr.cpp  ft_strdup.cpp  ft_strjoin.cpp  ft_strlcat.cpp  ft_strlcpy.cpp  ft_strlen.cpp  ft_strmapi.cpp  ft_strncmp.cpp  (+9 more)
srcs/: ConnectionClass.cpp  ConnectionHandling.cpp  RequestHeaders.cpp  ResponseHeaders.cpp  cgi.cpp  main.cpp  methods.cpp  utils.cpp
valgrind_tests/: error400.html  test1  testpage.html  webserver
(+19 files in other folders)
